<resources>
    <string name="Alarm">Alarm</string>
    <string name="Bluetooth">Bluetooth</string>
    <string name="Bookings">Bookings</string>
    <string name="Cancel">Cancel</string>
    <string name="Dismiss">Dismiss</string>
    <string name="GATEWAY_BLE_ERROR_INVALID_ACTUATOR_ACTING_REQUEST">Request failed, please try again. (Code: 100)</string>
    <string name="GATEWAY_BLE_ERROR_INVALID_ACTUATOR_ACTING_REQUEST_FORMAT">Request failed, please try again. (Code: 101)</string>
    <string name="GATEWAY_BLE_ERROR_INVALID_CHECKSUM">Communication error, please try again. (Code: 102)</string>
    <string name="GATEWAY_BLE_ERROR_INVALID_SERVER_RESPONSE">Invalid server response. (Code: 104)</string>
    <string name="GATEWAY_BLE_ERROR_JSON">Communication error. Please try again. (Code: 107)</string>
    <string name="GATEWAY_BLE_ERROR_NO_ACTUATOR_BY_THAT_INDEX_LOCALLY_FOUND">Invalid setup. Please correct setup and try again. (Code: 106)</string>
    <string name="GATEWAY_BLE_ERROR_NO_ACTUATOR_FROM_SERVER">Invalid setup. Please correct setup and try again. (Code: 105)</string>
    <string name="GATEWAY_BLE_ERROR_OTHER">General error: %s. Please try again. (Code: 108)</string>
    <string name="GATEWAY_BLE_ERROR_SERVER_RESPONDED_WITH_ERROR">Error: %s. Please try again. (Code: 103)</string>
    <string name="Locker">Locker</string>
    <string name="Map">Map</string>
    <string name="Notification">Notification</string>
    <string name="OK">OK</string>
    <string name="UNKNOWN_ERROR">Unknown error.</string>
    <string name="Web">Web</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_change">Change</string>
    <string name="action_confirm_delete_booking">Delete</string>
    <string name="action_confirm_finish_booking">Finish</string>
    <string name="action_continue">Rent</string>
    <string name="action_decline_delete_booking">Cancel</string>
    <string name="action_decline_finish_booking">Cancel</string>
    <string name="action_end_usage">Return</string>
    <string name="action_retry">Retry</string>
    <string name="action_turn_on">Turn on</string>
    <string name="aiddescription">SmartCard AID of Sensorberg Solution</string>
    <string name="app_name">Factory</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appcenter_distribute_dialog_actioned_on_disabled_toast">Distribute was disabled</string>
    <string name="appcenter_distribute_download_progress_number_format">%1$d MB of %2$d MB</string>
    <string name="appcenter_distribute_downloading_error">Failed to download app update</string>
    <string name="appcenter_distribute_downloading_mandatory_update">Downloading update</string>
    <string name="appcenter_distribute_downloading_update">@string/appcenter_distribute_downloading_mandatory_update</string>
    <string name="appcenter_distribute_install">Install</string>
    <string name="appcenter_distribute_install_ready_message">%1$s %2$s (%3$d) has been downloaded and is ready to be installed.</string>
    <string name="appcenter_distribute_install_ready_title">App update downloaded</string>
    <string name="appcenter_distribute_notification_category">App updates</string>
    <string name="appcenter_distribute_unknown_sources_dialog_message">For security, your device is set to block installation of apps obtained from unknown sources.</string>
    <string name="appcenter_distribute_unknown_sources_dialog_settings">Settings</string>
    <string name="appcenter_distribute_update_dialog_download">Download</string>
    <string name="appcenter_distribute_update_dialog_message_mandatory">The developers of this app require you to update to %1$s %2$s (%3$d).</string>
    <string name="appcenter_distribute_update_dialog_message_optional">%1$s %2$s (%3$d) is available to download and install.</string>
    <string name="appcenter_distribute_update_dialog_postpone">Ask me in a day</string>
    <string name="appcenter_distribute_update_dialog_title">App update available</string>
    <string name="appcenter_distribute_update_dialog_view_release_notes">View release notes</string>
    <string name="appcenter_distribute_update_failed_dialog_ignore">Ignore</string>
    <string name="appcenter_distribute_update_failed_dialog_message">This release was either side-loaded or downloaded using a browser in private mode.</string>
    <string name="appcenter_distribute_update_failed_dialog_reinstall">Reinstall app</string>
    <string name="appcenter_distribute_update_failed_dialog_title">In-app updates disabled</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="button_save_myrenz_credentials">Save MyRenz Credentials</string>
    <string name="cancel_send_logs">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.crashlytics.android.build_id">8582a132708b45f8b150ebc53006240f</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="create_booking_error">Could not create booking</string>
    <string name="create_booking_failed">Creating a booking for this locker failed. Please try again later</string>
    <string name="debug_menu">Debug Menu</string>
    <string name="default_web_client_id">588396769956-7hd2tseeh5isqhlih1539ok8t8sohb4j.apps.googleusercontent.com</string>
    <string name="description_bluetooth_required">Turn on Bluetooth to use the app</string>
    <string name="description_location_required">Turn on Location Services to use the app</string>
    <string name="dialog_reenable_alarm">Are you sure you want to re-enable the silent alarm?</string>
    <string name="enter_passcode">Enter Passcode</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="enter_your_passcode">Enter your passcode</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_message_bluetooth">Bluetooth not working. Try to disable it and enable again</string>
    <string name="error_message_failed_to_delete_booking">Failed to delete booking</string>
    <string name="error_message_search_timeout">Device could not be found</string>
    <string name="error_no_browser">No browser detected</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="label_about">Version</string>
    <string name="label_change_password">Change Password</string>
    <string name="label_current_password">Current Password</string>
    <string name="label_didnt_find_the_device">Looking for a different lock?</string>
    <string name="label_locker_book_again">Book my last locker again</string>
    <string name="label_locker_usage_ended">Locker usage ended</string>
    <string name="label_locker_usage_ended_hint">Please remember to take everything out of it.</string>
    <string name="label_logout">Logout</string>
    <string name="label_myrenz_credentials">MyRenz Credentials</string>
    <string name="label_new_password">New Password</string>
    <string name="label_new_password_confirmation">Confirm New Password</string>
    <string name="label_no_access_permission">You have no\10Access Permissions</string>
    <string name="label_no_doors_closeby">scanning\10for nearby\10locks</string>
    <string name="label_pin_reset">Reset PIN</string>
    <string name="label_settings_title">Settings</string>
    <string name="label_submit_feedback">Submit feedback</string>
    <string name="settings_debug_button">Debug</string>
</resources>