<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/root" android:tag="layout/frag_change_password_0" android:layout_width="match_parent" android:layout_height="match_parent" android:animateLayoutChanges="true">
    <com.google.android.material.appbar.AppBarLayout android:id="@+id/appbar" android:background="?android:attr/windowBackground" android:layout_width="match_parent" android:layout_height="?android:attr/actionBarSize" app:layout_constraintTop_toTopOf="0">
        <androidx.appcompat.widget.Toolbar android:id="@+id/toolbar" android:layout_width="match_parent" android:layout_height="wrap_content" app:navigationIcon="@drawable/ic_back" app:title="@string/label_change_password"/>
    </com.google.android.material.appbar.AppBarLayout>
    <TextView android:textColor="@color/onPrimary" android:gravity="center_vertical" android:id="@+id/changePasswordError" android:background="@color/error" android:visibility="gone" android:layout_width="0dp" android:layout_height="0dp" android:paddingStart="16dp" android:paddingEnd="0dp" android:elevation="8dp" app:layout_constraintBottom_toBottomOf="@+id/appbar" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/Text.Paragraph"/>
    <com.google.android.material.textfield.TextInputLayout android:id="@+id/input_1" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/label_current_password" android:layout_marginStart="64dp" android:layout_marginEnd="64dp" app:hintAnimationEnabled="true" app:hintEnabled="true" app:layout_constraintBottom_toTopOf="@+id/input_2" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/appbar" app:layout_constraintVertical_bias="0.4" app:layout_constraintVertical_chainStyle="2" app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/currentPassword" android:tag="binding_1" android:layout_width="match_parent" android:layout_height="wrap_content" android:maxLines="1" android:lines="1" android:inputType="textPassword" android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:id="@+id/input_2" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/label_new_password" android:layout_marginStart="64dp" android:layout_marginEnd="64dp" app:hintAnimationEnabled="true" app:hintEnabled="true" app:layout_constraintBottom_toTopOf="@+id/input_3" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/input_1" app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/newPassword" android:tag="binding_2" android:layout_width="match_parent" android:layout_height="wrap_content" android:maxLines="1" android:lines="1" android:inputType="textPassword" android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:id="@+id/input_3" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="8dp" android:hint="@string/label_new_password_confirmation" android:layout_marginStart="64dp" android:layout_marginEnd="64dp" app:hintAnimationEnabled="true" app:hintEnabled="true" app:layout_constraintBottom_toTopOf="@+id/button" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/input_2" app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/newPasswordConfirmation" android:tag="binding_3" android:layout_width="match_parent" android:layout_height="wrap_content" android:maxLines="1" android:lines="1" android:inputType="textPassword" android:imeOptions="actionGo"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button android:id="@+id/button" android:tag="binding_4" android:layout_width="160dp" android:layout_height="48dp" android:layout_marginBottom="32dp" android:text="@string/action_change" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" style="@style/Button"/>
    <com.sensorberg.smartworkspace.app.widgets.BlockingProgressBar android:id="@+id/block" android:tag="binding_5" android:layout_width="match_parent" android:layout_height="match_parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
