<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/root" android:tag="layout/frag_locker_booking_deleted_0" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:id="@+id/lockerBadge" android:layout_width="96dp" android:layout_height="96dp" android:elevation="4dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:srcCompat="@drawable/locker_booking_deleted_check"/>
    <TextView android:textStyle="bold" android:textColor="@color/primary" android:id="@+id/text1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_locker_usage_ended" app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" style="@style/Text.H4"/>
    <TextView android:textColor="@color/primary" android:gravity="center_horizontal" android:id="@+id/text2" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/label_locker_usage_ended_hint" app:layout_constraintEnd_toEndOf="@+id/right_guideline" app:layout_constraintStart_toStartOf="@+id/left_guideline" app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontal" style="@style/Text.Paragraph_big"/>
    <TextView android:textColor="@color/interaction" android:id="@+id/bookAgain" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50dp" android:text="@string/label_locker_book_again" app:layout_constraintEnd_toEndOf="@+id/right_guideline" app:layout_constraintStart_toStartOf="@+id/left_guideline" app:layout_constraintTop_toBottomOf="@+id/lockerBadge" style="@style/Text.Paragraph_big"/>
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@+id/guidelineHorizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.2"/>
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@+id/left_guideline" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.2"/>
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@+id/right_guideline" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.8"/>
</androidx.constraintlayout.widget.ConstraintLayout>
