<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/headerRoot" android:tag="layout/frag_nearby_unit_0" android:layout_width="match_parent" android:layout_height="match_parent" android:animateLayoutChanges="true">
    <TextView android:textColor="@color/primary" android:gravity="center" android:layout_gravity="center" android:tag="binding_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/label_no_access_permission" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/Text.H4"/>
    <ImageView android:id="@+id/waves" android:tag="binding_2" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:srcCompat="@drawable/waves"/>
    <com.sensorberg.core.view.IotUnitImageView android:id="@+id/target" android:tag="binding_3" android:layout_width="240dp" android:layout_height="240dp" android:scaleType="centerInside" app:iotUnit_size="0" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <TextView android:textColor="@color/onPrimary" android:gravity="center" android:id="@+id/text" android:tag="binding_4" android:layout_width="120dp" android:layout_height="120dp" android:maxLines="4" android:elevation="@dimen/iotUnitTextElevation" app:autoSizeMaxTextSize="36sp" app:autoSizeMinTextSize="12sp" app:autoSizeTextType="1" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <TextView android:textColor="@color/primary" android:gravity="center" android:id="@+id/textNoDoors" android:tag="binding_5" android:layout_width="120dp" android:layout_height="120dp" android:text="@string/label_no_doors_closeby" app:autoSizeTextType="1" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <TextView android:textColor="@color/interaction" android:gravity="center" android:id="@+id/notTheDeviceYouAreLookingForText" android:tag="binding_6" android:padding="12dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_didnt_find_the_device" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/waves" app:layout_constraintVertical_bias="0.2" style="@style/Text.H5"/>
</androidx.constraintlayout.widget.ConstraintLayout>
